--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "env/bin/python3.6"
+    "python.pythonPath": "C:\\Users\\KIRAN\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
